# internal/server/repository/orm/orm_repository.go
@@ -14,7 +14,7 @@ import (
 	_ "modernc.org/sqlite"
 )
 
-var ormEntities = []any{&BarrierRootKey{}, &BarrierIntermediateKey{}, &BarrierContentKey{}, &ElasticKey{}, &Key{}}
+var ormEntities = []any{&BarrierRootKey{}, &BarrierIntermediateKey{}, &BarrierContentKey{}, &ElasticKey{}, &MaterialKey{}}
 
 type OrmRepository struct {
 	telemetryService *cryptoutilTelemetry.TelemetryService
